--- a/scss/s-contact.scss
+++ b/scss/s-contact.scss
@@ -8,4 +8,6 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 @import '_variables.scss';
 @import '_mixin.scss';
 @import 'page-section/_navbar.scss';
+@import 'page-section/contact/_page-intro.scss';
+@import 'page-section/contact/_form-info.scss';
 @import 'page-section/_footer.scss';
