--- a/scss/s-contact.scss
+++ b/scss/s-contact.scss
@@ -11,3 +11,4 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 @import 'page-section/contact/_page-intro.scss';
 @import 'page-section/contact/_form-info.scss';
 @import 'page-section/_footer.scss';
+@import 'page-section/contact/_responsive.scss';
