--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,7 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 @import '_variables.scss';
 @import '_mixin.scss';
 @import 'page-section/_navbar.scss';
+@import 'page-section/home/_wel-sec.scss';
+@import 'page-section/home/_tip-sec.scss';
+@import 'page-section/home/_story-sec.scss';
 @import 'page-section/_footer.scss';
