--- a/css/s-contact.css
+++ b/css/s-contact.css
@@ -55,9 +55,10 @@ nav .nav-R {
   justify-content: center;
 }
 .page-intro h2 {
+  text-align: center;
+  font-size: 2.2rem;
   color: #4E944F;
-  font-size: 2rem;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 .page-intro p {
   color: #3B2F2F;
