--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,3 +12,4 @@ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 @import 'page-section/home/_tip-sec.scss';
 @import 'page-section/home/_story-sec.scss';
 @import 'page-section/_footer.scss';
+@import 'page-section/home/_responsive.scss';
