--- a/scss/page-section/home/_responsive.scss
+++ b/scss/page-section/home/_responsive.scss
@@ -58,10 +58,6 @@
             };
         };
     };
-   
-
-
-
 
     footer {
         font-size: 12px;
@@ -70,4 +66,26 @@
             padding: 0px 40px;
         };
     };
+};
+
+
+@media (max-width: 600px) and (min-width: 360px) {
+    nav {
+        padding: 0px 20px;
+        .nav-L {
+            img {
+                height: 40px;
+            };
+        };
+        .nav-mid {
+            ul {
+                gap: 10px;
+                a {
+                    font-size: 12px;
+                };
+            };
+        };
+    };       
+    
+
 }
